@startuml

class "披萨 \n pizza" as pizza {
    + prepare();
    + bake();
    + cut();
    + box();
}

class chessPizza {
}

class greekPizza {
}

class orderPizza {
}

class orderfactory{
}

pizza <|-- chessPizza
pizza <|-- greekPizza

orderPizza --> pizza
orderPizza --> greekPizza
orderPizza --> chessPizza

orderfactory --> orderPizza

@enduml